--- a/src/app/styles/index.css
+++ b/src/app/styles/index.css
@@ -1,3 +1,3 @@
-@import './reset.css';
-@import './variables.css';
-@import './fonts.css';
+@import url('./reset.css');
+@import url('./variables.css');
+@import url('./fonts.css');
