--- a/src/app/styles/variables.css
+++ b/src/app/styles/variables.css
@@ -15,27 +15,26 @@
   --line-height-h2: 32px;
 
   /* color variables */
-  --bg-color: #F9FAF7;
+  --bg-color: #f9faf7;
   --text-color: #253017;
-  --text-disabled-color: #9CA197;
-  --caption-color: #69735D;
-  --toggler-color: #B2B9A9;
-  --button-disabled-color: #E4E8DF;
+  --text-disabled-color: #9ca197;
+  --caption-color: #69735d;
+  --toggler-color: #b2b9a9;
+  --button-disabled-color: #e4e8df;
   --button-pressed-color: #508826;
-  --button-hover-color: #DEEBC5;
-  --card-input-color: #FFFFFF;
-  --accent-color: #ABD27A;
-  --alarm-color: #E0796E;
-  --error-color: #BF3920;
-  --tag-business-color: #EEE7F7;
-  --tag-art-color: #F7E7F2;
-  --tag-languages-color: #EBE5C5;
-  --tag-education-color: #E7F2F6;
-  --tag-home-color: #F7EBE5;
-  --tag-health-color: #E9F7E7;
-  --tag-add-color: #E8ECF7;
+  --button-hover-color: #deebc5;
+  --card-input-color: #ffffff;
+  --accent-color: #abd27a;
+  --alarm-color: #e0796e;
+  --error-color: #bf3920;
+  --tag-business-color: #eee7f7;
+  --tag-art-color: #f7e7f2;
+  --tag-languages-color: #ebe5c5;
+  --tag-education-color: #e7f2f6;
+  --tag-home-color: #f7ebe5;
+  --tag-health-color: #e9f7e7;
+  --tag-add-color: #e8ecf7;
 
   /* size variables */
   --border-raduis-main: 12px;
 }
-
