--- a/src/app/styles/fonts.css
+++ b/src/app/styles/fonts.css
@@ -3,7 +3,7 @@
   font-family: "Jost";
   font-style: normal;
   font-display: swap;
-  src: url("../../assets/fonts/Jost-Medium.ttf") format("ttf");
+  src: url("../../assets/fonts/Jost-Medium.ttf") format("truetype");
 }
 
 @font-face {
@@ -11,7 +11,7 @@
   font-family: "Roboto";
   font-style: normal;
   font-display: swap;
-  src: url("../../assets/fonts/Roboto-Regular.ttf") format("ttf");
+  src: url("../../assets/fonts/Roboto-Regular.ttf") format("truetype");
 }
 
 @font-face {
@@ -19,5 +19,5 @@
   font-family: "Roboto";
   font-style: normal;
   font-display: swap;
-  src: url("../../assets/fonts/Roboto-Medium.ttf") format("ttf");
+  src: url("../../assets/fonts/Roboto-Medium.ttf") format("truetype");
 }
