--- a/src/shared/ui/modal/modal-ui/modalUI.module.css
+++ b/src/shared/ui/modal/modal-ui/modalUI.module.css
@@ -4,59 +4,9 @@
   left: 50%;
   z-index: 1;
   box-sizing: border-box;
-  width: 556px;
-  margin: auto;
+  min-width: 556px;
   padding: 60px 62px;
   background-color: var(--card-input-color);
   border-radius: var(--border-raduis-main);
   transform: translate(-50%, -50%);
-}
-
-.image {
-  display: block;
-  width: 100px;
-  height: 100px;
-  margin: auto;
-  padding-bottom: 52px;
-  object-fit: cover;
-  object-position: center;
-}
-
-.title {
-  padding-bottom: 12px;
-  color: var(--text-color);
-  font-weight: var(--font-weight-accent);
-  font-size: var(--font-size-h2);
-  font-family: var(--font-accent);
-  line-height: 1.17;
-  letter-spacing: -1.1%;
-  text-align: center;
-}
-
-.content {
-  padding-bottom: 32px;
-  color: var(--text-color);
-  font-weight: var(--font-weight);
-  font-size: var(--font-size-main);
-  font-family: var(--font-main);
-  line-height: 1.5;
-  letter-spacing: 2%;
-  text-align: center;
-  text-shadow: 0 4px 4px rgb(0 0 0 / 25%);
-}
-
-.button {
-  width: 100%;
-  height: 48px;
-  margin: 0;
-  padding: 0;
-  color: var(--text-color);
-  font-weight: var(--font-weight);
-  font-size: var(--font-size-main);
-  font-family: var(--font-main);
-  line-height: 1.5;
-  text-align: center;
-  background-color: var(--accent-color);
-  border-radius: var(--border-raduis-main);
-  cursor: pointer;
 }
