--- a/src/widgets/skills-menu/skills-menu.module.css
+++ b/src/widgets/skills-menu/skills-menu.module.css
@@ -1,5 +1,4 @@
 .skillsMenu {
-  width: 1136px;
   padding: 60px;
 }
 
@@ -13,6 +12,7 @@
   display: flex;
   flex-direction: column;
   gap: 40px;
+  min-width: 0;
 }
 
 .category {
@@ -43,8 +43,6 @@
   align-items: center;
   width: 40px;
   height: 40px;
-  font-size: 24px;
-  line-height: 1;
 }
 
 .categoryTitle {
