--- a/src/widgets/auth-form/styles.module.css
+++ b/src/widgets/auth-form/styles.module.css
@@ -1,6 +1,7 @@
 .registration {
   padding: 116px 60px;
   background-color: var(--card-input-color);
+  border-radius: var(--border-raduis-main);
 }
 
 .registration__link {
