--- a/src/widgets/slider/images-slider/images-slider.module.css
+++ b/src/widgets/slider/images-slider/images-slider.module.css
@@ -86,7 +86,7 @@
 
 .thumb.firstThumb.lastThumb:hover {
   box-shadow: 0 8px 20px rgb(0 0 0 / 18%);
-  transform: translateY(4px) scale(1.08); /* или -4px — как тебе больше нравится */
+  transform: translateY(4px) scale(1.08);
 }
 
 .thumbImg {
